# reussir

./: .gitignore  CMakeLists.txt  Cargo.toml  debug_test.mlir  rustc-ice-2025-07-19T22_28_23-375606.txt  rustc-ice-2025-07-19T22_28_23-375607.txt  rustc-ice-2025-07-19T22_28_26-375731.txt  rustc-ice-2025-07-19T22_28_26-375732.txt  rustc-ice-2025-08-21T22_38_23-760218.txt  test_nullable_coerce.mlir
.cache/clangd/index/: ReussirAttrs.cpp.801F10C478B01745.idx  ReussirAttrs.cpp.A099277B36F02269.idx  ReussirAttrs.cppm.359DC80B9272A8B5.idx  ReussirAttrs.h.67B468F135C8D75B.idx  ReussirDialect.cpp.05F236264974DB47.idx  ReussirDialect.cpp.7A8CAEA1CD4F4ACB.idx  ReussirDialect.cppm.762887211DF56F2D.idx  ReussirDialect.h.9E0C97D949190577.idx  ReussirEnumAttrs.cpp.3E3EAD99A943CD6D.idx  ReussirEnumAttrs.cpp.538D805442EF4B55.idx  ReussirEnumAttrs.cppm.8D52328590D9C8A5.idx  ReussirEnumAttrs.h.6D756DA710A3FD02.idx  ReussirEnums.cppm.D5095ECDE6E4B23B.idx  ReussirOps.cpp.F629B504BA3029A0.idx  ReussirTypeDetails.cppm.3C7727D25F249E08.idx  ReussirTypeDetails.h.C228EE0493737AA3.idx  ReussirTypes.cpp.08B7D60B9C95A966.idx  ReussirTypes.cpp.17BCF04C56281393.idx  ReussirTypes.cppm.0221E8EF10C209B7.idx  ReussirTypes.h.3FBAD81D41E11DED.idx  ReussirTypesDetails.cppm.9F41BAB852526220.idx  main.cpp.1CE6359FA52CFD07.idx
.cargo/: config.toml
.github/workflows/: mlir-cpp-test.yml
cmake/: FindLLVM.cmake
crates/bridge/: Cargo.toml  build.rs
crates/bridge/src/: lib.rs  string_view.h  string_view.rs
crates/core/: Cargo.toml
crates/core/src/: func.rs  intrinsics.rs  ir.rs  lib.rs  literal.rs  module.rs  types.rs
crates/front/: Cargo.toml
crates/front/misc/: fibonacci.rr  simple_failure_test_1.rr  simple_failure_test_2.rr  simple_test.rr
crates/front/src/: expr.rs  lexer.rs  lib.rs  stmt.rs  types.rs
crates/sema/: Cargo.toml
crates/sema/src/: builder.rs  expr.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: unifier.rs
docs/: book.typ
docs/chapters/: about.typ
docs/chapters/development/: compilation-process.typ
docs/chapters/language/: reference-capabilities.typ  syntax.typ
docs/templates/: page.typ
include/Reussir/: Bridge.h
include/Reussir/Analysis/: AliasAnalysis.h
include/Reussir/Conversion/: BasicOpsLowering.h  CMakeLists.txt  DropExpansion.h  Passes.h  Passes.td  RcDecrementExpansion.h  SCFOpsLowering.h  TypeConverter.h
include/Reussir/IR/: CMakeLists.txt  ReussirAttrs.h  ReussirAttrs.td  ReussirDialect.h  ReussirDialect.td  ReussirEnumAttrs.h  ReussirOps.h  ReussirOps.td  ReussirTypeDetails.h  ReussirTypes.h  ReussirTypes.td
lib/: CMakeLists.txt
lib/Analysis/: AliasAnalysis.cpp  CMakeLists.txt
lib/Bridge/: Bridge.cpp  CMakeLists.txt  ReussirBridge.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/BasicOpsLowering/: BasicOpsLowering.cpp  CMakeLists.txt
lib/Conversion/DropExpansion/: CMakeLists.txt  DropExpansion.cpp
lib/Conversion/RcDecrementExpansion/: CMakeLists.txt  RcDecrementExpansion.cpp
lib/Conversion/SCFOpsLowering/: CMakeLists.txt  SCFOpsLowering.cpp
lib/Conversion/TypeConverter/: CMakeLists.txt  TypeConverter.cpp
lib/IR/: CMakeLists.txt  ReussirAttrs.cpp  ReussirDialect.cpp  ReussirEnumAttrs.cpp  ReussirOps.cpp  ReussirTypes.cpp
misc/: logo.py
src/IR/: CMakeLists.txt  ReussirAttrs.cpp  ReussirAttrs.cppm  ReussirDialect.cpp  ReussirDialect.cppm  ReussirEnumAttrs.cpp  ReussirEnumAttrs.cppm  ReussirTypeDetails.cppm  ReussirTypes.cpp  ReussirTypes.cppm
tests/integration/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/integration/basic/: record.mlir
tests/integration/basic/failure/: closure_apply_no_inputs.mlir  closure_apply_wrong_arg_type.mlir  closure_eval_not_fully_applied.mlir  closure_eval_result_with_void.mlir  closure_eval_void_with_result.mlir  closure_eval_wrong_result_type.mlir  closure_yield_mismatch.mlir  closure_yield_missing_value.mlir  closure_yield_unexpected_value.mlir  nullable_coerce.mlir  nullable_dispatch_extra_nonnull_arg.mlir  nullable_dispatch_missing_nonnull_arg.mlir  nullable_dispatch_null_region_with_arg.mlir  nullable_dispatch_wrong_nonnull_arg.mlir  nullable_invalid_inner.mlir  rc_invalid_cap.mlir  rc_multi_cap.mlir  record_coerce.mlir  record_dispatch_incomplete_coverage.mlir  record_dispatch_overlapping_tags.mlir  record_dispatch_single_tag_missing_arg.mlir  record_dispatch_single_tag_wrong_arg_type.mlir  record_tag_compound_record.mlir  record_tag_incomplete_record.mlir  record_tag_invalid_type.mlir  scf_yield_wrong_type.mlir  token_invalid_size.mlir  token_odd_align.mlir
tests/integration/basic/success/: closure_apply.mlir  closure_eval.mlir  closure_yield.mlir  closures.mlir  nullable.mlir  nullable_coerce.mlir  nullable_dispatch.mlir  nullable_operations.mlir  rc.mlir  rc_operation.mlir  record.mlir  record_coerce.mlir  record_create.mlir  record_dispatch.mlir  record_tag.mlir  ref.mlir  ref_drop.mlir  ref_project.mlir  region.mlir  scf_yield.mlir  token.mlir  token_operations.mlir
tests/integration/compilation/: fib.c  fib.rr  fib2.c  fib2.rr
tests/integration/conversion/: nullable_coerce.mlir  nullable_dispatch_ops.mlir  nullable_ops.mlir  option_like_ops.mlir  rc_ops.mlir  record_coerce.mlir  record_dispatch_ops.mlir  record_ops.mlir  ref_ops.mlir  token_ops.mlir
tool/: CMakeLists.txt
tool/reussir-opt/: CMakeLists.txt  main.cpp
tool/rrc/: Cargo.toml  build.rs  fix_rpath.sh
tool/rrc/src/: main.rs
