[package]
name = "reussir-front"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = { version = "0.10.1", features = ["pratt", "lexical-numbers"] }
lexical = { version = "7.0.4", default-features = false, features = ["format", "power-of-two", "parse-integers"] }
logos = "0.15.0"
reussir-core = { path = "../core" }
rustc_apfloat = "0.2.3"
strum = "0.27.1"
thiserror = "2.0.12"
ustr = "1.1.0"
